Make button smaller, fix separation issues

--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -165,9 +165,9 @@ a {
 /* Separation */
 
 .tse-separation-small {
-  padding-top: 1em;
+  margin-top: 1em;
 }
 
 .tse-separation-medium {
-  padding-top: 3em;
+  margin-top: 3em;
 }
